# ts6-classifier

./: .gitignore  README.md  RELEASE_NOTES.md  REPORT.md  pyproject.toml
notebooks/: model_ensemble_t6se.ipynb
scripts/: demo_check_api.py  make_features.py
src/: pkg_resources.py
src/t6/: __init__.py
src/t6/domain/: __init__.py  records.py
src/t6/features/: __init__.py  extractor.py  types.py
src/t6/features/blocks/: __init__.py  ctd.py  seq.py  utils.py
src/t6/io/: __init__.py  dataset.py  fasta.py
src/t6/modeling/: __init__.py  baselines.py
src/t6/pipeline/: __init__.py  build_features.py  export.py
